# tsa-ocr-scanner

./: .gitignore  README.md  index.html  package.json
.github/workflows/: build.yml
src/: main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  health.rs  logging.rs  main.rs  secrets.rs  watcher.rs
